<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="favorites">Избранное</string>
    <string name="share">Поделиться</string>
    <string name="main">Главная</string>
    <string name="team">Команда</string>
    <string name="vacancy_search">Поиск вакансий</string>
    <string name="enter_your_query">Введите запрос</string>
    <string name="enter_sum">Введите сумму</string>
    <string name="enter_your_industry">Введите отрасль</string>
    <string name="empty_list">Список Пуст</string>
    <string name="favorites_error_load">Не удалось получить\nсписок вакансий</string>
    <string name="search_industry_empty_list">Такой отрасли нет</string>
    <string name="search_industry_error_list">Не удалось получить список</string>
    <string name="vacancy_toolbar_title">Вакансия</string>
    <string name="no_vacancy_found_text">Вакансия не найдена или\nудалена</string>
    <string name="vacancy_no_salary_bounds">Зарплата не указана</string>
    <string name="vacancy_salary_bounds_from">от %1$s %2$s</string>
    <string name="vacancy_salary_bounds_to">до %1$s %2$s</string>
    <string name="vacancy_salary_bounds_from_to">от %1$s %2$s до %3$s %4$s</string>
    <string name="required_experience_title">Требуемый опыт</string>
    <string name="vacancy_description_title">Описание вакансии</string>
    <string name="key_skills_title">Ключевые навыки</string>
    <string name="no_internet">Нет интернета</string>
    <string name="error">Произошла ошибка</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="retry">Повторить</string>
    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="salary_from">от</string>
    <string name="salary_to">до</string>
    <string name="contacts">Контакты</string>
    <string name="call_via">Позвонить через</string>
    <string name="vacancy_empty">Вакансия не найдена или удалена</string>
    <string name="vacancies_found_count">Найдено %d вакансий</string>
    <string name="choose_industry">Выбор отрасли</string>
    <string name="select">Выбрать</string>
    <string name="check_internet">Проверьте подключение к интернету</string>
    <string name="error_happen">Произошла ошибка</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="do_not_show_without_salary">Не показывать без зарплаты</string>
    <string name="apply">Применить</string>
    <string name="discard">Сбросить</string>
    <string name="no_vacancy">Таких вакансий нет</string>
</resources>
