<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".favorites.ui.FavoritesFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/favoritesToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:title="@string/favorites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoritesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_md"
        app:layout_constraintTop_toBottomOf="@+id/favoritesToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/placeholderEmptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/favoritesToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/placeholderEmptyListImage"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/placeholder_image_height"
            android:layout_marginHorizontal="@dimen/spacing_md"
            android:src="@drawable/favorites_empty_list" />

        <TextView
            android:id="@+id/emptyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/FavoritesPlaceholder"
            android:text="@string/empty_list"
            android:layout_marginTop="@dimen/spacing_md" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeholderErrorLoadList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/favoritesToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/emptyImageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/placeholder_image_height"
            android:layout_marginHorizontal="@dimen/spacing_md"
            android:src="@drawable/favorites_error_load" />

        <TextView
            android:id="@+id/errorLoadTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/FavoritesPlaceholder"
            android:text="@string/favorites_error_load"
            android:layout_marginTop="@dimen/spacing_md" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
