<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vacancy.ui.VacancyFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/vacancy_contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/vacancy_title"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_md"
                android:layout_marginTop="80dp"
                android:text="Android-разработчик"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/vacancy_subtitle"
                style="@style/SubtitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="от 100000"
                app:layout_constraintStart_toStartOf="@+id/vacancy_title"
                app:layout_constraintTop_toBottomOf="@+id/vacancy_title" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/vacancy_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_md"
                android:layout_marginTop="@dimen/spacing_xl"
                android:backgroundTint="@color/light_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vacancy_subtitle"
                app:cardCornerRadius="12dp">

                <include
                    android:id="@+id/vacancy_card_item"
                    layout="@layout/vacancy_item" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/required_experience_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xl"
                style="@style/SmallTitleText"
                android:text="@string/required_experience_title"
                app:layout_constraintStart_toStartOf="@+id/vacancy_card"
                app:layout_constraintTop_toBottomOf="@+id/vacancy_card" />

            <TextView
                android:id="@+id/required_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xs"
                style="@style/SmallText"
                android:text="От 1 года до 4 лет"
                app:layout_constraintStart_toStartOf="@+id/required_experience_title"
                app:layout_constraintTop_toBottomOf="@+id/required_experience_title" />

            <TextView
                android:id="@+id/schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                style="@style/SmallText"
                android:text="Полная занятость, Удаленная работа"
                app:layout_constraintStart_toStartOf="@+id/required_experience"
                app:layout_constraintTop_toBottomOf="@+id/required_experience" />

            <TextView
                android:id="@+id/vacancy_description"
                style="@style/SmallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xxl"
                android:text="Длинное описание, которое надо парсить"
                app:layout_constraintStart_toStartOf="@+id/schedule"
                app:layout_constraintTop_toBottomOf="@+id/schedule" />

            <TextView
                android:id="@+id/skills_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubtitleText"
                android:text="@string/key_skills_title"
                app:layout_constraintStart_toStartOf="@+id/vacancy_description"
                app:layout_constraintTop_toBottomOf="@+id/vacancy_description" />

            <TextView
                android:id="@+id/skills"
                style="@style/SmallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="Несколько навыков"
                app:layout_constraintStart_toStartOf="@+id/skills_title"
                app:layout_constraintTop_toBottomOf="@+id/skills_title" />

            <TextView
                android:id="@+id/contacts_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                style="@style/SubtitleText"
                android:text="@string/contacts"
                app:layout_constraintStart_toStartOf="@+id/skills"
                app:layout_constraintTop_toBottomOf="@+id/skills" />

            <TextView
                android:id="@+id/contacts"
                style="@style/SmallText"
                android:autoLink="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_md"
                android:text="Несколько контактов"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/contacts_title"
                app:layout_constraintTop_toBottomOf="@+id/contacts_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/toolbar"
        layout="@layout/aggregator_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/error_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vacancy_not_found" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SubtitleText"
            android:layout_marginTop="@dimen/spacing_md"
            android:gravity="center"
            android:text="@string/no_vacancy_found_text" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/blue"
            android:indeterminateTintMode="src_in"/>
    </FrameLayout>

</FrameLayout>
